--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ img {
 }
 
 div {
-    background-color: snow;
+    background-color: white;
     border-radius: 10px;
     padding: 26px;
     width: 80%;
@@ -23,5 +23,5 @@ h1 {
 }
 
 p {
-    text-align: left;
+    text-align: center;
 }
